Create image and recipe page
created both the reipe folder and cheesecake page

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -6,12 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <img src="./img/foodtruck.jpg" alt="">
-    <ol>
-        <li><a href="./recipes/cheesecake.html">Cheesecake</a></li>
+    <h1>Cheesecake</h1>
     
-    
-    </ol>
 </body>
 </html>
