final touches before EOD

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -7,6 +7,16 @@
 </head>
 <body>
     <h1>Cheesecake</h1>
-    
+    <img src="../img/cheesecake.jpeg" alt="Delicious Cheesecake">
+    <h3>The Bountiful Cheesecake</h3>
+    <p>This cheesecake not only ended world war two, it went on to write the best selling book in america.
+        when this puppy was made it gave people a reason to live. today we may call it "cheesecake" but not
+        too long ago it was sustiance, a will to strive forward, the call of duty from the sweets unknown. 
+        today were going to make a cheesecake bitch and this is how its done.
+    </p>
+    <ul>
+        <li>Four 8-ounce bricks of full fat cream cheese</li>
+    </ul>
+    <a href="#header">Ascend</a>
 </body>
 </html>
