create new page and finish cheesecake recipes
finished creating the cheesecake page and stated
working on the sensu bean page aswell.

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -16,7 +16,17 @@
     </p>
     <ul>
         <li>Four 8-ounce bricks of full fat cream cheese</li>
+        <li>1 cup of sugar</li>
+        <li>1 cup of sour cream</li>
+        <li>1 teaspoon of pure vanilla extract</li>
+        <li>3 eggs</li>
     </ul>
+    <ol>
+        <li>This is a project and im not about to write a million things so toss that shit all together and hope for the best</li>
+        <li>Its not in the ingredients but buy yoself some graham cracker crust, it be bussin</li>
+        <li>Put in the oven for an undetermined time, dont really need to have a preset time, just let the lord take control and maybe take it out when it looks done</li>
+        <li>Enjoy the cheesecake</li>
+    </ol>
     <a href="#header">Ascend</a>
 </body>
 </html>
