add correct nameage to senzu beans
corrected spelling across all directories

--- a/recipes/senzu_beans.html
+++ b/recipes/senzu_beans.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Senzu_Beans</title>
 </head>
 <body>
-    <h1>Sensu Beans</h1>
+    <h1>Senzu Beans</h1>
     
 </body>
 </html>
