--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="./img/foodtruck.jpg" alt="">
     <ul>
         <li><a href="./recipes/cheesecake.html">Cheesecake</a></li>
-        <li><a href="./recipes/sensu_beans.html">Sensu Beans</a></li>
+        <li><a href="./recipes/senzu_beans.html">Senzu Beans</a></li>
     
     </ul>
 </body>
