Finish Senzu Beans recipe

--- a/recipes/senzu_beans.html
+++ b/recipes/senzu_beans.html
@@ -7,6 +7,28 @@
 </head>
 <body>
     <h1>Senzu Beans</h1>
-    
+    <img src="../img/senzu_beans.jpeg" alt="Senzu Beans sales-cat">
+    <h3>Senzu Bean Delight</h3>
+    <p>The revitalizing Senzu Beans are the creation of non other than the greatest furry to 
+        walk the planet, Korin. The highly versitile beans will help you take on the likes of 
+        Saiyans and androids a-like. Allowing you to not succumb to injury nor fatiuge. These intense 
+        tik-tacs not only restore you to your former glory, they help you become beach body ready with 
+        just one Bean keeping you full for no less then TEN whole days!
+    </p>
+    <ul>
+        <li>One tower reaching the heavens</li>
+        <li>One magical talking cat(preferably one named Korin)</li>
+        <li>One handful of magical beans from spaces unkown</li>
+    </ul>
+    <ol>
+        <li>Obtain the tower, the beans, and a talking cat</li>
+        <li>Plant said Senzu Beans</li>
+        <li>Cherish both the cat and beans while they grow(it's said to take a long time for the latter to grow so get chatting with your furry partner)</li>
+        <li>Once beans are ripe they are perfectly capable of being picked right off the vine and taken into battle</li>
+        <li>Lastly, annihalate any foes whom may have caused you grievances knowing full well you have the ability to restore yourself at any given point</li>
+        <li>Enjoy!</li>
+
+    </ol>
+    <a href="#header">Ascend</a>
 </body>
 </html>
