--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <li><a href="./recipes/cheesecake.html">Cheesecake</a></li>
         <li><a href="./recipes/senzu_beans.html">Senzu Beans</a></li>
-    
+        <li><a href="./recipes/gysahl_smoothie.html">Gysahl Greens Smoothie</a></li>
     </ul>
 </body>
 </html>
