Create unified lists with capitals and spell check

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -16,10 +16,10 @@
     </p>
     <ul>
         <li>Four 8-ounce bricks of full fat cream cheese</li>
-        <li>1 cup of sugar</li>
-        <li>1 cup of sour cream</li>
-        <li>1 teaspoon of pure vanilla extract</li>
-        <li>3 eggs</li>
+        <li>One cup of sugar</li>
+        <li>One cup of sour cream</li>
+        <li>One teaspoon of pure vanilla extract</li>
+        <li>Three eggs</li>
     </ul>
     <ol>
         <li>This is a project and im not about to write a million things so toss that shit all together and hope for the best</li>
