--- a/recipes/gysahl_smoothie.html
+++ b/recipes/gysahl_smoothie.html
@@ -19,8 +19,8 @@
         <li>One Banana</li>
         <li>One piece of romaine lettuce</li>
         <li>Three scoops of frozen vanilla yogurt</li>
-        <li>one-fourth cup of coconut milk</li>
-        <li>two teaspoons of matcha</li>
+        <li>One-fourth cup of coconut milk</li>
+        <li>Two teaspoons of matcha</li>
     </ul>
     <ol>
         <li>Put all ingredients into blender</li>
