--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="stylesheet.css">
     <title>Recipes Hub</title>
 </head>
-<body>
     <h1>Odin Recipes</h1>
-    <img src="./img/foodtruck.jpg" alt="">
+    <img class="block img" src="./img/foodtruck.jpg" alt="you dont get to see cool foodtruck">
     <ul>
-        <li><a href="./recipes/cheesecake.html">Cheesecake</a></li>
-        <li><a href="./recipes/senzu_beans.html">Senzu Beans</a></li>
-        <li><a href="./recipes/gysahl_smoothie.html">Gysahl Greens Smoothie</a></li>
+        <div class="block recipes"><li><a href="./recipes/cheesecake.html">Cheesecake</a></li></div>
+        <div class="block recipes"><li><a href="./recipes/senzu_beans.html">Senzu Beans</a></li></div>
+        <div class="block recipes"><li><a  href="./recipes/gysahl_smoothie.html">Gysahl Greens Smoothie</a></li></div>
     </ul>
 </body>
 </html>
