--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <ul>
         <div class="block recipes"><li><a href="./recipes/cheesecake.html">Cheesecake</a></li></div>
         <div class="block recipes"><li><a href="./recipes/senzu_beans.html">Senzu Beans</a></li></div>
-        <div class="block recipes"><li><a  href="./recipes/gysahl_smoothie.html">Gysahl Greens Smoothie</a></li></div>
+        <div class="block recipes"><li><a  href="./recipes/gysahl_smoothie.html">Gysahl Shake</a></li></div>
     </ul>
 </body>
 </html>
