add background, changed text and block colors, fix block settings padding margin etc

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <link rel="stylesheet" href="stylesheet.css">
     <title>Recipes Hub</title>
 </head>
-    <h1>Odin Recipes</h1>
-    <img class="block img" src="./img/foodtruck.jpg" alt="you dont get to see cool foodtruck">
-    <ul>
-        <div class="block recipes"><li><a href="./recipes/cheesecake.html">Cheesecake</a></li></div>
-        <div class="block recipes"><li><a href="./recipes/senzu_beans.html">Senzu Beans</a></li></div>
-        <div class="block recipes"><li><a  href="./recipes/gysahl_smoothie.html">Gysahl Shake</a></li></div>
-    </ul>
+<body>
+    <div class="cover">
+        <h1 class="title">Odin Recipes</h1>
+        <img class="img" src="./img/blueberries.jpg" alt="you dont get to see cool foodtruck">
+        <ul>
+            <li class="block"><a href="./recipes/cheesecake.html">Cheesecake</a></li>
+            <li class="block"><a href="./recipes/senzu_beans.html">Senzu Beans</a></li>
+            <li class="block"><a  href="./recipes/gysahl_smoothie.html">Gysahl Shake</a></li>
+        </ul>
+    </div>
 </body>
 </html>
